2.3.6pre

    * Fix order of arguments in SQLWriteFileDSN.c, fix unwanted free() in iusql.c

2-Jan-2018
2.3.5

    * Add configure option --enable-setlibversion set mark the libs with VERS_3.52
      Linux only, so any driver built with the libs will work with closed source 
      DM's
    * Add persistent storage of isql command line history if readline() is used (thanks Axel)
    * Rename some local mutex functions to avoid name clashes
    * Assorted fixes (Thanks Markus * 2)
    * Fix regression in ini caching
    * Make SQLDrivers look in user as well as system odbcinst.ini for driver attributes
    * If in use, clear the ini cache when a write is done via SQLWritePrivateProfileString() so 
      the new value is read
    * Fix problem with pooling if the environment was released by the application
    * Add check for SQL_COLUMN_COUNT in SQLColAttribute
    * isql would not display long error messages. Fixed now.
    * Fix problem calling the driver to report errors if the error is from the DM and the driver 
      has not been called
    * SQLSetConnectAttrW crashes when attempting to set SQL_ATTR_LOGIN_TIMEOUT
    * Buffer overflow in unicode_to_ansi_copy()
    * SQLDriverConnect with not-found FILEDSN causes crash
    * SQLGetDescRec with null name pointer causes crash
    * Connection string escaping does not work
    * SQLDriverConnect/W with very long driver name causes crash
    * Connection string with trailing empty value causes crash
    * Freeing explicitly allocated descriptor results in writing to freed memory
    * Buffer overflows and missing null checks in SQLConfigDataSource, SQLInstallDriverEx, and SQLWriteFileDSN
    * Statement enters incorrect state upon SQLExecDirectW returning SQL_NO_DATA
    * SQLBulkOperations fails to exit async state after success
    * SQLFreeStmt causes prepared statements in S1 or S2 to erroneously transition to S3
    * Buffer length fixes for SQLGetDiagField