@@ -44,6 +44,7 @@ Holger Bischoff
 Holger Schurig
 Honza Horak
 Hristo Hristov
+Hugh McMaster
 Ian Ashley
 James Dugal
 Jan Cihlar
