@@ -518,45 +518,50 @@ AC_SUBST(LIB_VERSION)
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_HEADERS(unixodbc_conf.h)
 
-AC_OUTPUT( Makefile \
-    extras/Makefile \
-    log/Makefile \
-    lst/Makefile \
-    ini/Makefile \
-    odbcinst/Makefile \
-    cur/Makefile \
-    DriverManager/Makefile \
-    exe/Makefile \
-    DRVConfig/Makefile \
-    DRVConfig/drvcfg1/Makefile \
-    DRVConfig/drvcfg2/Makefile \
-    DRVConfig/PostgreSQL/Makefile \
-    DRVConfig/MiniSQL/Makefile \
-    DRVConfig/MySQL/Makefile \
-    DRVConfig/nn/Makefile \
-    DRVConfig/esoob/Makefile \
-    DRVConfig/oplodbc/Makefile \
-    DRVConfig/template/Makefile \
-    DRVConfig/tds/Makefile \
-    DRVConfig/txt/Makefile \
-    DRVConfig/Oracle/Makefile \
-    DRVConfig/sapdb/Makefile \
-    DRVConfig/Mimer/Makefile \
-    Drivers/Makefile \
-    Drivers/Postgre7.1/Makefile \
-    Drivers/nn/Makefile \
-    Drivers/template/Makefile \
-    Drivers/MiniSQL/Makefile \
-    include/Makefile \
-    man/Makefile \
-    doc/Makefile \
-    doc/AdministratorManual/Makefile \
-    doc/ProgrammerManual/Makefile \
-    doc/ProgrammerManual/Tutorial/Makefile \
-    doc/UserManual/Makefile \
-    doc/lst/Makefile \
-    samples/Makefile \
-    )
+AC_CONFIG_FILES([
+  Makefile
+  extras/Makefile
+  log/Makefile
+  lst/Makefile
+  ini/Makefile
+  odbcinst/Makefile
+  odbcinst/odbcinst.pc
+  cur/Makefile
+  cur/odbccr.pc
+  DriverManager/Makefile
+  DriverManager/odbc.pc
+  exe/Makefile
+  DRVConfig/Makefile
+  DRVConfig/drvcfg1/Makefile
+  DRVConfig/drvcfg2/Makefile
+  DRVConfig/PostgreSQL/Makefile
+  DRVConfig/MiniSQL/Makefile
+  DRVConfig/MySQL/Makefile
+  DRVConfig/nn/Makefile
+  DRVConfig/esoob/Makefile
+  DRVConfig/oplodbc/Makefile
+  DRVConfig/template/Makefile
+  DRVConfig/tds/Makefile
+  DRVConfig/txt/Makefile
+  DRVConfig/Oracle/Makefile
+  DRVConfig/sapdb/Makefile
+  DRVConfig/Mimer/Makefile
+  Drivers/Makefile
+  Drivers/Postgre7.1/Makefile
+  Drivers/nn/Makefile
+  Drivers/template/Makefile
+  Drivers/MiniSQL/Makefile
+  include/Makefile
+  man/Makefile
+  doc/Makefile
+  doc/AdministratorManual/Makefile
+  doc/ProgrammerManual/Makefile
+  doc/ProgrammerManual/Tutorial/Makefile
+  doc/UserManual/Makefile
+  doc/lst/Makefile
+  samples/Makefile
+])
+AC_OUTPUT
 
 dnl Attempt to add version information to libraries generated by libtool
 AC_MSG_CHECKING( are we setting library version )
